--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"next-pwa": "^5.6.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-icons": "^5.5.0",
 		"swr": "^2.2.5",
 		"three": "^0.161.0"
 	},
@@ -33,7 +34,7 @@
 		"eslint-config-next": "14.1.0",
 		"postcss": "^8.4.35",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5.3.3",
+		"typescript": "5.9.3",
 		"workbox-webpack-plugin": "^7.0.0"
 	}
 }
